POST createUser implemented incl. JPA
